--- a/Unsupervised Learning/Author Clustering/0_PCA.ipynb
+++ b/Unsupervised Learning/Author Clustering/0_PCA.ipynb
@@ -4,13 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*** WORK IN PROGRESS ***"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Download the necessary libraries & import data.\n",
     "\n",
     "Link to data - https://raw.githubusercontent.com/DataSlingers/clustRviz/master/data/authors.rda"
@@ -18,24 +11,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 498,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
    "source": [
-    "%pip install umap-learn --quiet"
+    "%pip install umap-learn --quiet\n",
+    "%pip install adjustText --quiet"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 499,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,12 +48,14 @@
     "from scipy.spatial.distance import pdist, squareform\n",
     "from sklearn.manifold import SpectralEmbedding\n",
     "import seaborn as sns\n",
-    "import umap"
+    "import umap\n",
+    "\n",
+    "from adjustText import adjust_text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 500,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +402,7 @@
        "[841 rows x 71 columns]"
       ]
      },
-     "execution_count": 353,
+     "execution_count": 500,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +414,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": 501,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Author', 'a', 'all', 'also', 'an', 'and', 'any', 'are', 'as', 'at',\n",
+       "       'be', 'been', 'but', 'by', 'can', 'do', 'down', 'even', 'every', 'for.',\n",
+       "       'from', 'had', 'has', 'have', 'her', 'his', 'if.', 'in.', 'into', 'is',\n",
+       "       'it', 'its', 'may', 'more', 'must', 'my', 'no', 'not', 'now', 'of',\n",
+       "       'on', 'one', 'only', 'or', 'our', 'should', 'so', 'some', 'such',\n",
+       "       'than', 'that', 'the', 'their', 'then', 'there', 'things', 'this', 'to',\n",
+       "       'up', 'upon', 'was', 'were', 'what', 'when', 'which', 'who', 'will',\n",
+       "       'with', 'would', 'your', 'BookID'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 501,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns # some words have a period. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 502,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +456,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 354,
+     "execution_count": 502,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
+   "execution_count": 503,
    "metadata": {},
    "outputs": [
     {
@@ -802,7 +827,7 @@
        "[841 rows x 69 columns]"
       ]
      },
-     "execution_count": 355,
+     "execution_count": 503,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -843,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 356,
+   "execution_count": 504,
    "metadata": {},
    "outputs": [
     {
@@ -1216,7 +1241,7 @@
        "[841 rows x 69 columns]"
       ]
      },
-     "execution_count": 356,
+     "execution_count": 504,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1245,7 +1270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 505,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1258,7 +1283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": 506,
    "metadata": {},
    "outputs": [
     {
@@ -1284,7 +1309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
+   "execution_count": 507,
    "metadata": {},
    "outputs": [
     {
@@ -1332,7 +1357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 360,
+   "execution_count": 508,
    "metadata": {},
    "outputs": [
     {
@@ -1374,7 +1399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 361,
+   "execution_count": 509,
    "metadata": {},
    "outputs": [
     {
@@ -1747,7 +1772,7 @@
        "[69 rows x 841 columns]"
       ]
      },
-     "execution_count": 361,
+     "execution_count": 509,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1760,7 +1785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 362,
+   "execution_count": 510,
    "metadata": {},
    "outputs": [
     {
@@ -2133,7 +2158,7 @@
        "[69 rows x 69 columns]"
       ]
      },
-     "execution_count": 362,
+     "execution_count": 510,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2163,7 +2188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 363,
+   "execution_count": 511,
    "metadata": {},
    "outputs": [
     {
@@ -2390,7 +2415,7 @@
        "[69 rows x 11 columns]"
       ]
      },
-     "execution_count": 363,
+     "execution_count": 511,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2415,7 +2440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 512,
    "metadata": {},
    "outputs": [
     {
@@ -2445,7 +2470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 365,
+   "execution_count": 513,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2458,7 +2483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 366,
+   "execution_count": 514,
    "metadata": {},
    "outputs": [
     {
@@ -2482,50 +2507,6 @@
     "plt.title(f'{x} vs {y}')\n",
     "plt.legend(loc='upper right')\n",
     "plt.tight_layout();"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Non-Negative Matrix Factorization (NMF)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 367,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Add a small constant to ensure non-negativity (important for NMF)\n",
-    "# df3 = df.copy().drop(columns=[\"Author\", \"BookID\"])\n",
-    "# X = df3.to_numpy() + 1e-6\n",
-    "\n",
-    "# # Choose K values (number of components/topics to visualize)\n",
-    "# K_values_nmf = [3, 6, 12]\n",
-    "\n",
-    "# for k in K_values_nmf:\n",
-    "#     model = NMF(n_components=k, init='random', random_state=0, max_iter=500)\n",
-    "#     W = model.fit_transform(X)  # shape: (n_samples, k)\n",
-    "#     H = model.components_       # shape: (k, n_features)\n",
-    "\n",
-    "#     # Plot the basis vectors (topics)\n",
-    "#     nrows = k // 3\n",
-    "#     ncols = 3\n",
-    "#     fig, axs = plt.subplots(nrows=nrows, ncols=ncols, figsize=(12, 4 * nrows))\n",
-    "#     axs = axs.flatten()\n",
-    "\n",
-    "#     for i in range(k):\n",
-    "#         basis_vector = H[i, :]  # i-th topic\n",
-    "#         axs[i].bar(np.arange(len(basis_vector)), basis_vector)\n",
-    "#         axs[i].set_title(f\"Topic {i+1}\")\n",
-    "#         axs[i].set_xlabel(\"Words (features)\")\n",
-    "#         axs[i].set_ylabel(\"Weight\")\n",
-    "#         axs[i].set_xticks([])\n",
-    "\n",
-    "#     fig.suptitle(f\"NMF Basis Components (Topics), k = {k}\")\n",
-    "#     plt.tight_layout()\n",
-    "#     plt.show()"
    ]
   }
  ],
