--- a/Unsupervised Learning/Author Clustering/4_Biclustering.ipynb
+++ b/Unsupervised Learning/Author Clustering/4_Biclustering.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,16 +23,12 @@
     "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.decomposition import TruncatedSVD\n",
     "\n",
-    "from sklearn.cluster import SpectralBiclustering, SpectralCoclustering\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "from sklearn.cluster import SpectralBiclustering, SpectralCoclustering"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
